# Image-Metadata-Listing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
